# libyui-mga

./: .gitignore  CMakeLists.txt  ChangeLog  MAINTAINER  PROJECTINFO.cmake  README.md  RPMNAME  SOURCECONF.cmake  TODO.md  VERSION.cmake  libyui-mga-doc.changes  libyui-mga.spec
examples/: AboutDialog.cc  CMakeLists.txt  ManyWidgets.cc  MenuBar.cc  MsgBoxDialog.cc  YCBTable.cc
pkgconfig/: CMakeLists.txt  libyui-mga.pc.in
po/: libyui-mga-aboutdialog.pot
po/it/: libyui-mga-aboutdialog.po
screenshots/: test_menubar.mkv
src/: CMakeLists.txt  YMGAAboutDialog.cc  YMGAAboutDialog.h  YMGAMenuBar.cc  YMGAMenuBar.h  YMGAMenuItem.h  YMGAMsgBox.cc  YMGAMsgBox.h  YMGAWidgetExtensionFactory.cc  YMGAWidgetExtensionFactory.h  YMGA_CBTable.cc  YMGA_CBTable.h
